fill in data for other pages, mostly crap data

--- a/index.html
+++ b/index.html
@@ -114,15 +114,12 @@
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
                         I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
                         <br/>
                         <br/>
-                        <!-- Design choices + nuance -->
                         The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
                         <br/>
                         <br/>
-                        <!-- Function -->
                         It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
                       </h4>
                     </div>
@@ -132,22 +129,28 @@
                 <li class="page page-awge-forums">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/awge/awge-landing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-home.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-shop.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-videos.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-contact.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">AWGE Forums</h2>
-                      <a target="_blank" href="https://forums.awgeshit.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://forums.awgeshit.com">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        Awge Forums description...
                       </h4>
                     </div>
                   </div>
@@ -156,22 +159,27 @@
                 <li class="page page-revenge-x-storm">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/revenge/revenge-landing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/revenge/revenge-shop.PNG" />
+                          <img class="page-content-image" src="/assets/projects/revenge/revenge-shoe.PNG" />
+                          <img class="page-content-image" src="/assets/projects/revenge/revenge-kylie.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">Revenge X Storm</h2>
-                      <a target="_blank" href="https://revengexstorm.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://www.revengexstorm.com">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        Revenge x Storm description...
                       </h4>
                     </div>
                   </div>
@@ -180,22 +188,26 @@
                 <li class="page page-nessly">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/nessly/nessly-home.PNG" />
+                          <img class="page-content-image" src="/assets/projects/nessly/nessly-model.PNG" />
+                          <img class="page-content-image" src="/assets/projects/nessly/nessly-store.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">Nessly</h2>
-                      <a target="_blank" href="https://nesslyworld.com" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://nesslyworld.com">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        Nessly description...
                       </h4>
                     </div>
                   </div>
@@ -204,22 +216,28 @@
                 <li class="page page-piamia">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/awge/awge-landing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-home.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-shop.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-videos.PNG" />
+                          <img class="page-content-image" src="/assets/projects/awge/awge-contact.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">Pia Mia</h2>
-                      <a target="_blank" href="http://alexshortt.com/projects/piamia" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="http://alexshortt.com/projects/piamia">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        Pia Mia description...
                       </h4>
                     </div>
                   </div>
@@ -228,22 +246,27 @@
                 <li class="page page-sounddown">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/sounddown/sounddown-listing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/sounddown/sounddown-popup.PNG" />
+                          <img class="page-content-image" src="/assets/projects/sounddown/sounddown-modal.PNG" />
+                          <img class="page-content-image" src="/assets/projects/sounddown/sounddown-download.PNG" />
+                        </div>
+                      </div>
                       <h2 class="page-content-text">SoundDown</h2>
-                      <a target="_blank" href="https://chrome.google.com/webstore/detail/sounddown/ljjaomnfoepedhkncdffdadnpmckoohb" class="page-content-link fas fa-external-link-alt"></a>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://chrome.google.com/webstore/detail/sounddown/ljjaomnfoepedhkncdffdadnpmckoohb">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        SoundDown description...
                       </h4>
                     </div>
                   </div>
@@ -252,22 +275,28 @@
                 <li class="page page-portalgun">
                   <div class="page-content">
                     <div class="page-content-cover">
-                      <img class="page-content-image" src="https://images.genius.com/8f79cbf7a6358de4ce4587e8c7273e0e.563x563x1.jpg" />
-                      <h2 class="page-content-text">GTA V Portal Gun Mod</h2>
-                      <a target="_blank" href="https://www.gta5-mods.com/scripts/portal-gun-net" class="page-content-link fas fa-external-link-alt"></a>
+                      <div class="page-content-cover-dir">
+                        <div class="page-content-cover-left action-prev"></div>
+                        <div class="page-content-cover-right action-next"></div>
+                      </div>
+                      <div class="page-content-gallerymask">
+                        <div id="gallery" class="page-content-gallery">
+                          <img class="page-content-image" src="/assets/projects/portal/portal-listing.PNG" />
+                          <img class="page-content-image" src="/assets/projects/portal/portal-game.PNG" />
+                          <img class="page-content-image" src="/assets/projects/portal/portal-poster.PNG" />
+                          <img class="page-content-image" src="/assets/projects/portal/portal-youtube.PNG" />
+                          <img class="page-content-image" src="/assets/projects/portal/portal-kwebbelkop.PNG" />
+                        </div>
+                      </div>
+                      <h2 class="page-content-text">Portal Gun Mod</h2>
+                    </div>
+                    <div class="page-content-actions">
+                      <h3 class="page-content-action action-gallery">gallery</h3>
+                      <h3 class="page-content-action action-visit" data-link="https://www.gta5-mods.com/scripts/portal-gun-net">visit</h3>
                     </div>
                     <div class="page-content-desc">
                       <h4>
-                        <!-- Date + brag about reach -->
-                        I built this site in August 2016, and since then it has reached over a million users and securely captured thousands of purchases.
-                        <br/>
-                        <br/>
-                        <!-- Design choices + nuance -->
-                        The site displays a consistent retro aesthetic down to the smallest detail, offering an immersive experience for the user.
-                        <br/>
-                        <br/>
-                        <!-- Function -->
-                        It offers media curated by AWGE members, a secure shop, 3d interaction with the products, and a contact form.
+                        Portal Gun description...
                       </h4>
                     </div>
                   </div>
