clean up small things for launch

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div id="menu-nav" class="rect-menu menu-nav">
         <h1 id="menu-nav-projects" class="menu-nav-option">Projects</h1>
-        <h1 id="menu-nav-gallery" class="menu-nav-option">Gallery</h1>
+        <!-- <h1 id="menu-nav-gallery" class="menu-nav-option">Gallery</h1> -->
         <h1 id="menu-nav-about" class="menu-nav-option">About</h1>
         <h1 id="menu-nav-message" class="menu-nav-option">Message</h1>
         <h1 id="menu-nav-social" class="menu-nav-option">Social</h1>
@@ -312,9 +312,10 @@
                     <div class="deepspace-comet deepspace-comet-2"></div>
                     <div class="deepspace-comet deepspace-comet-3"></div>
                     <div class="deepspace-comet deepspace-comet-4"></div>
-                    <img id="backcover-saturn" class="backcover-saturn backcover-saturn-hidden" src="/assets/space/saturn.png" />
+                    <img id="backcover-saturn" onclick="_book.changePage(1)" class="backcover-saturn backcover-saturn-hidden" src="/assets/space/saturn.png" />
                   </div>
                   <img id="backcover-girl" class="parallax backcover-girl hidden" data-speed="0.5" src="/assets/space/girl.png" />
+                  <!-- <img id="backcover-girl" class="parallax backcover-girl hidden" data-speed="0.5" src="/assets/space/couple-guy-floor.png" /> -->
                 </li>
                 <li></li>
               </ul>
@@ -397,7 +398,6 @@
               <h3 class="about-list">I program.</h3>
               <h3 class="about-list">I design.</h3>
               <h3 class="about-list">I mix music.</h3>
-              <h3 class="about-list">I can make powerpoints in space.</h3>
             </div>
           </div>
         </div>
